--- a/ejercicio2-html-y-css/styles.css
+++ b/ejercicio2-html-y-css/styles.css
@@ -1,3 +1,12 @@
+body {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  background-image: url(fondos-para-páginas-web-2.jpg);
+  padding: 20px;
+}
+
 form {
   margin: 0 auto;
   display: flex;
@@ -9,11 +18,19 @@ form {
   color: white;
   gap: 5px;
   font-family: sans-serif;
+  width: 300px;
+  height: 50%;
+
+  margin-top: 50px;
+}
+.button {
+  display: flex;
+  justify-content: end;
 }
 input,
-select {
-  padding: 5px;
-}
-button {
-  padding: 5px, 15px;
+select,
+label {
+  padding: 7px;
+  display: inline-flex;
+  justify-content: start;
 }
